feat: Add pet management screens and functionality
- Add various pet-related screens (food, water, walk, status)
- Implement pet profile and detail views
- Add pet list and map features
- Setup environment configuration

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,20 +20,22 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+        // Specify your own unique Application ID.
         applicationId = "com.example.my_pet_doctor"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+
+        // Update the minSdkVersion explicitly to 20.
+        minSdkVersion flutter.minSdkVersion
+        targetSdkVersion flutter.targetSdkVersion
+        versionCode flutter.versionCode
+        versionName flutter.versionName
+
+        // Enable MultiDex for older Android versions.
+        multiDexEnabled true
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+            // Add your own signing config for the release build.
             signingConfig = signingConfigs.debug
         }
     }
@@ -41,4 +43,9 @@ android {
 
 flutter {
     source = "../.."
+}
+
+dependencies {
+    // Add MultiDex support library.
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
