--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,25 @@ dependencies:
     sdk: flutter
   sqflite: ^2.3.0
   path: ^1.8.3
+  uuid: ^3.0.7
+  google_maps_flutter: ^2.5.3
+  geolocator: ^10.1.0
+  http: ^1.1.0
+  url_launcher: ^6.2.5
+  google_generative_ai: ^0.1.0
+  flutter_dotenv: ^5.1.0
+  package_info_plus: ^4.0.0
+  shared_preferences: ^2.2.2
+  intl: ^0.18.1
+  image_picker: ^1.0.7
+  path_provider: ^2.0.15
+
+
+
+
+
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -58,6 +77,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - .env
 
   # To add assets to your application, add an assets section, like this:
   # assets:
